# theBIGbam

./: CHANGES_RLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  TODO.txt  add_variable.py  calculating_data.py  constants.py  generate_database.py  generate_html.py  generating_test_sets.md  main.py  plotting_data.py  plotting_features.py  pyproject.toml  start_bokeh_server.py  test_commands.sh  thebigbam_env.yaml
docs/: ASSEMBLY_CHECK.md  BINNING.md  DATABASE.md  DEVELOPERS_NOTE.md  FILTERS.md  INSTALL.md  MISALIGNMENT.md  PHAGE_PACKAGING.md  PREPROCESSING.md
mgfeatureviewer/: calculating_data.py  cli.py  data_accessor.py  plotting_data_all_samples.py  plotting_data_per_sample.py  read_mapping.py  start_bokeh_server.py
mgfeatureviewer/database/: add_variable.py  calculating_data.py  data_accessor.py  database_getters.py
mgfeatureviewer/plotting/: __init__.py  plotting_data_all_samples.py  plotting_data_per_sample.py  start_bokeh_server.py
mgfeatureviewer/utils/: assembly_annotation.py  autoblast.py  read_mapping.py
rust_calculate/: Cargo.toml
rust_calculate/src/: main.rs
src/: bam_reader.rs  cigar.rs  circular.rs  compress.rs  db.rs  features.rs  gc_content.rs  genbank.rs  lib.rs  main.rs  parquet.rs  parser.rs  processing.rs  processing_completeness.rs  processing_phage_packaging.rs  types.rs
static/: bokeh_styles.css  pink_buttons.css
tests/: 1000_long_reads_for_test_10kbp.fastq  100_long_reads_for_test_10kbp_concatenated_100_times.fastq  5000_read_pairs_for_test_10kbp_concatenated_100_times_R1.fastq  5000_read_pairs_for_test_10kbp_concatenated_100_times_R2.fastq  50_read_pairs_for_test_10kbp_R1.fastq  50_read_pairs_for_test_10kbp_R2.fastq  50_read_pairs_for_test_10kbp_inverted_R1.fastq  50_read_pairs_for_test_10kbp_inverted_R2.fastq  conftest.py  test_10000bp.fasta  test_10000bp.fasta.fai  test_10000bp_doubled.fasta  test_pipeline.py
tests/circular_bams/: 1000_long_reads_circular.bam  1000_long_reads_circular.bam.bai  100_long_reads_concat_circular.bam  100_long_reads_concat_circular.bam.bai  5000_read_pairs_concat_circular.bam  5000_read_pairs_concat_circular.bam.bai  50_read_pairs_circular.bam  50_read_pairs_circular.bam.bai  50_read_pairs_inverted_circular.bam  50_read_pairs_inverted_circular.bam.bai
tests/linear_bams/: 1000_long_reads.bam  1000_long_reads.bam.bai  100_long_reads_concat.bam  100_long_reads_concat.bam.bai  5000_read_pairs_concat.bam  5000_read_pairs_concat.bam.bai  50_read_pairs.bam  50_read_pairs.bam.bai  50_read_pairs_inverted.bam  50_read_pairs_inverted.bam.bai
thebigbam/: cli.py
thebigbam/database/: add_variable.py  calculating_data.py  database_getters.py
thebigbam/plotting/: downloading_data.py  perusing_data.py  plotting_data_all_samples.py  plotting_data_per_sample.py  searchable_select.py  start_bokeh_server.py
thebigbam/utils/: add_contig_metadata.py  add_sample_metadata.py  convert_circular_bam.py  read_mapping.py
tmp/: TEST.md  TODO.md  TODOONEDAY.md
validation/: README.md  compare.py
