[package]
name = "thebigbam_calc"
version = "0.1.0"
edition = "2021"

[lib]
name = "thebigbam_rs"
crate-type = ["cdylib", "rlib"]

# Binary removed - use Python CLI instead: thebigbam calculate ...
# (Python CLI calls Rust via PyO3 bindings, avoiding duplicate argument parsing)

[features]
default = []
python = ["pyo3"]

[dependencies]
# BAM/SAM reading
rust-htslib = "0.51"

# Parallelism
rayon = "1.10"

# CLI
clap = { version = "4", features = ["derive"] }

# GenBank parsing
gb-io = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Progress and logging
indicatif = "0.17"
atty = "0.2"

# Path handling
walkdir = "2"

# DuckDB for metadata.db (columnar, better compression)
duckdb = { version = "1.1", features = ["bundled"] }

# Temp files for autoblast
tempfile = "3"

# Statistics (Poisson test for phage packaging peak significance)
statrs = "0.18"

# PyO3 bindings (optional, enabled via "python" feature)
pyo3 = { version = "0.23", features = ["extension-module", "anyhow"], optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
