[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgfeatureviewer"
version = "0.1.0"
description = "Interactive and static plotting of mapping-derived features for microbial genomes"
readme = "README.md"
authors = [ { name = "Your Name" } ]
license = { text = "MIT" }

# Minimal supported dependencies (adjust as needed)
dependencies = [
    "bokeh>=3.0",
    "biopython>=1.79",
    "pysam>=0.20",
    "numpy>=1.24",
    "numba>=0.56",
    "dna-features-viewer>=1.0",
    "viztracer>=0.16",
    "pyarrow>=14.0",
    "duckdb>=0.9",
]

[project.scripts]
mgfeatureviewer = "mgfeatureviewer.cli:main"

[tool.setuptools]
# Discover the package modules within the `mgfeatureviewer` folder so the CLI module is installed.
packages = ["mgfeatureviewer"]
