[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mgfeatureviewer"
version = "0.1.0"
description = "Interactive and static plotting of mapping-derived features for microbial genomes"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "bokeh>=3.0",
    "panel>=1.0",
    "biopython>=1.79",
    "pysam>=0.20",
    "numpy>=1.24",
    "numba>=0.56",
    "dna-features-viewer>=1.0",
    "pyarrow>=14.0",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.4",
]

[project.scripts]
mgfeatureviewer = "mgfeatureviewer.cli:main"

[tool.maturin]
# Build with the "python" feature enabled for PyO3 bindings
features = ["python"]
# Module name for the Rust extension (separate from the Python package)
module-name = "mgfeatureviewer_rs"
# Explicitly include the Python package
python-packages = ["mgfeatureviewer"]
# Include static files in the package
include = ["static/*"]
# Strip debug symbols
strip = true
