[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "thebigbam"
version = "1.0.0"
description = "Compression and interactive exploration of large-scale sequencing alignments with circular mapping support"
readme = "README.md"
authors = [{ name = "Martin Boutroux", email = "martinboutroux@outlook.fr" }]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/bhagavadgitadu22/theBIGbam"
Repository = "https://github.com/bhagavadgitadu22/theBIGbam"
Issues = "https://github.com/bhagavadgitadu22/theBIGbam/issues"

dependencies = [
    "bokeh>=3.0",
    "panel>=1.0",
    "biopython>=1.79",
    "pysam>=0.20",
    "dna-features-viewer>=1.0",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.4",
]

[project.scripts]
thebigbam = "thebigbam.cli:main"

[tool.maturin]
# Build with the "python" feature enabled for PyO3 bindings
features = ["python"]
# Module name for the Rust extension (separate from the Python package)
module-name = "thebigbam_rs"
# Explicitly include the Python package
python-packages = ["thebigbam"]
# Include static files in the package
include = ["static/*"]
# Strip debug symbols
strip = true
